# gym-ignition

./: .clang-format  .gitignore  .lgtm.yml  .travis.yml  CMakeLists.txt  README.md  pyproject.toml  setup.cfg  setup.py
bindings/: CMakeLists.txt  __init__.py  gympp.i  gympp_bindings.i  optional.i  weak_ptr.i
bindings/core/: CMakeLists.txt  core.i
bindings/gazebo/: CMakeLists.txt  gazebo.i  to_gazebo.i
bindings/gympp/: CMakeLists.txt  gympp_bindings.i
bindings/scenario/: CMakeLists.txt  scenario_bindings.i
controllers/: CMakeLists.txt
controllers/include/gympp/controllers/: ComputedTorqueFixedBase.h  Controller.h  PositionController.h  PositionControllerReferences.h
controllers/src/: ComputedTorqueFixedBase.cpp
docs/: CMakeLists.txt
docs/doxygen/: CMakeLists.txt
docs/sphinx/: CMakeLists.txt  conf.py  index.html  index.rst
docs/sphinx/_templates/: package.rst_t  versioning.html
docs/sphinx/apidoc/gym-ignition/: gym_ignition.base.rst  gym_ignition.context.gazebo.rst  gym_ignition.context.rst  gym_ignition.controllers.gazebo.rst  gym_ignition.experimental.rst  gym_ignition.randomizers.base.rst  gym_ignition.randomizers.model.rst  gym_ignition.randomizers.physics.rst  gym_ignition.randomizers.rst  gym_ignition.rbd.idyntree.rst  gym_ignition.rbd.rst  gym_ignition.rst  gym_ignition.runtimes.rst  gym_ignition.scenario.rst  gym_ignition.utils.rst
docs/sphinx/apidoc/gym-ignition-environments/: gym_ignition_environments.models.rst  gym_ignition_environments.randomizers.rst  gym_ignition_environments.rst  gym_ignition_environments.tasks.rst
docs/sphinx/apidoc/scenario/: scenario.bindings.rst  scenario.rst
docs/sphinx/breathe/: core.rst  gazebo.rst
docs/sphinx/getting_started/: gym-ignition.rst  manipulation.rst  scenario.rst
docs/sphinx/info/: faq.rst  limitations.rst
docs/sphinx/installation/: developer.rst  installation_user.rst  intro.rst  nightly.rst  stable.rst  support_policy.rst  system_configuration.rst  virtual_environment.rst
docs/sphinx/motivations/: why_gym_ignition.rst
docs/sphinx/what/: what_is_gym_ignition.rst  what_is_scenario.rst
docs/sphinx/why/: motivations.rst  why_gym_ignition.rst  why_scenario.rst
examples/cpp/: CMakeLists.txt  LaunchCartPole.cpp  LaunchParallelCartPole.cpp
examples/launchIgnition/: CMakeLists.txt  launchIgnGazebo.cpp
examples/launchIgnitionMultithread/: CMakeLists.txt  launchIgnGazeboMultithread.cpp
gym/gympp/: CMakeLists.txt
gym/gympp/include/gympp/: Environment.h  Gympp.h  Random.h  Robot.h  Space.h  common.h
gym/gympp/src/: Random.cpp  Space.cpp
gym/ignition/: CMakeLists.txt
gym/ignition/src/: Ignition.cpp  IgnitionEnvironment.cpp  IgnitionRobot.cpp  RobotSingleton.cpp
gym_ignition_data/: CMakeLists.txt  __init__.py
gym_ignition_data/CartPole/: CartPole.sdf  CartPole.urdf  CartPole.urdf.xacro  README.md  model.config
gym_ignition_data/CartPole/rviz/: display.launch
gym_ignition_data/Pendulum/: Pendulum.sdf  Pendulum.urdf  Pendulum.urdf.xacro  model.config
gym_ignition_data/iCubGazebo/: model.config
gym_ignition_data/iCubGazeboV2_5/: iCubGazeboV2_5.sdf  model.config
gym_ignition_data/worlds/: CartPole.world  DefaultEmptyWorld.world  Pendulum.world  Sofa.sdf  iCubGazebo.world  iCubGazeboV2_5.world
gympp/: CMakeLists.txt
gympp/include/gympp/: Common.h  Environment.h  Log.h  Random.h  Robot.h  Space.h
gympp/src/: Random.cpp  Space.cpp
ignition/: CMakeLists.txt
ignition/include/gympp/gazebo/: ECMSingleton.h  EnvironmentCallbacks.h  EnvironmentCallbacksSingleton.h  GazeboWrapper.h  IgnitionEnvironment.h  IgnitionRobot.h  RobotSingleton.h  Task.h  TaskSingleton.h
ignition/src/: ECMSingleton.cpp  EnvironmentCallbacksSingleton.cpp  GazeboWrapper.cpp  IgnitionEnvironment.cpp  IgnitionRobot.cpp  RobotSingleton.cpp  TaskSingleton.cpp
models/: CMakeLists.txt  package.xml
models/CartPole/: CartPole.sdf  CartPole.urdf  CartPole.urdf.xacro  CartPoleWorld.sdf
models/CartPole/rviz/: display.rviz
models/Minitaur/: minitaur_constrained.sdf  minitaur_converted.sdf  minitaur_original.sdf  model.config
models/Minitaur/meshes/: tmotor3.dae
models/Minitaur/rviz/: display.launch  display.rviz  minitaur_gazebo.urdf
models/Pendulum/: Pendulum.urdf.xacro
models/iCubGazebo/: icub.sdf
models/iCubGazeboV2_5/: iCubGazeboV2_5.sdf
models/icubIgnition/: IcubIgnition.sdf  IcubWorld.sdf  iCubGazeboV2_5.sdf  model.config
models/worlds/: CartPole.world  DefaultEmptyWorld.world  Minitaur-fixed.world  Minitaur.world  iCubGazebo.world  iCubGazeboV2_5.world
plugins/CartPole/: CMakeLists.txt  CartPolePlugin.cpp  CartPolePlugin.h
plugins/ECMProvider/: CMakeLists.txt  ECMProvider.cpp  ECMProvider.h
plugins/GymFactory/: CMakeLists.txt
plugins/GymFactory/include/gympp/: GymFactory.h  Metadata.h  PluginDatabase.h
plugins/GymFactory/src/: GymFactory.cpp
plugins/Physics/: CMakeLists.txt  Physics.cpp  Physics.h
plugins/RobotController/: CMakeLists.txt  RobotController.cpp  RobotController.h
scenario/: CMakeLists.txt  README.md  pyproject.toml  setup.cfg  setup.py
scenario/bindings/: CMakeLists.txt  __init__.py
scenario/bindings/core/: CMakeLists.txt  core.i
scenario/bindings/gazebo/: CMakeLists.txt  gazebo.i  to_gazebo.i
scenario/cmake/: AddNewBuildMode.cmake  AddUninstallTarget.cmake  FindGazeboDistribution.cmake  FindIgnitionDistribution.cmake  FindPython3.cmake  FindSphinxApidoc.cmake  FindSphinxMultiVersion.cmake  ImportTargetsCitadel.cmake  ImportTargetsDome.cmake  ImportTargetsEdifice.cmake  ImportTargetsFortress.cmake  ImportTargetsGarden.cmake
scenario/cmake/FindPython/: Support.cmake
scenario/gazebo/src/: Link.cpp
scenario/plugins/ECMProvider/: CMakeLists.txt  ECMProvider.cpp
scenario/plugins/Physics/: Physics.cc
scenario/src/: CMakeLists.txt
scenario/src/controllers/: CMakeLists.txt
scenario/src/controllers/src/: ComputedTorqueFixedBase.cpp
scenario/src/core/: CMakeLists.txt
scenario/src/core/src/: signals.cpp
scenario/src/gazebo/: CMakeLists.txt
scenario/src/gazebo/src/: GazeboSimulator.cpp  Joint.cpp  (+5 more)
scenario/src/plugins/: CMakeLists.txt
(+698 files in other folders)
