# Copyright (C) 2021 Istituto Italiano di Tecnologia (IIT). All rights reserved.
# This software may be modified and distributed under the terms of the
# GNU Lesser General Public License v2.1 or any later version.

[metadata]
name = gym_ignition
description = A toolkit for developing OpenAI Gym environments simulated with Ignition Gazebo.
long_description = file: README.md
long_description_content_type = text/markdown
author = Diego Ferigo
author_email = dgferigo@gmail.com
license = LGPL
license_file = LICENSE
platforms = any
url = https://github.com/robotology/gym-ignition

project_urls =
    Changelog = https://github.com/robotology/gym-ignition/releases
    Tracker = https://github.com/robotology/gym-ignition/issues
    Documentation = https://robotology.github.io/gym-ignition
    Source = https://github.com/robotology/gym-ignition

keywords =
    openai
    gym
    reinforcement learning
    rl
    environment
    gazebo
    robotics
    ignition
    humanoid
    panda
    icub
    urdf
    sdf

classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: POSIX :: Linux
    Topic :: Games/Entertainment :: Simulation
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development
    Framework :: Robot Framework
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)

[options]
zip_safe = False
packages = find:
package_dir =
    =python
python_requires = >=3.8
install_requires =
    scenar_io
    gym>=0.13.1
    numpy
    scipy
    gym_ignition_models
    lxml
    idyntree

[options.packages.find]
where = python

[options.extras_require]
testing =
    pytest
    pytest-xvfb
    pytest-forked
    pytest-icdiff
website =
    sphinx
    sphinx-book-theme
    sphinx-autodoc-typehints
    sphinx_fontawesome
    sphinx-multiversion
    sphinx-tabs
    breathe
all =
    %(testing)s
    %(website)s

[tool:pytest]
addopts = -rsxX -v --strict-markers --forked
testpaths = tests
markers =
    scenario: Select the tests in the 'tests/test_scenario/' folder.
    gym_ignition: Select the tests in the 'tests/test_gym_ignition/' folder.
