# Copyright (C) 2020 Istituto Italiano di Tecnologia (IIT). All rights reserved.
# This software may be modified and distributed under the terms of the
# GNU Lesser General Public License v2.1 or any later version.

# This variable is filled from the doxygen/ folder.
# Defined here empty to remember that it exists in this scope.
set(DOXYGEN_OUTPUT_DIRECTORY "")

add_subdirectory(doxygen)
add_subdirectory(sphinx)
